Prep grpc Usage for Python (#39)
Update Bazel to use grpc.

Ran into a few issues that prevent us from using grpc with C++ for the
moment, several -copt changes, as well as dependency conflicts that I
just kept running into, more details in #40.

--- a/.bazelrc
+++ b/.bazelrc
@@ -20,7 +20,8 @@ build --copt -Wempty-body
 build --copt -Wenum-conversion
 build --copt -Wexpansion-to-defined
 build --copt -Wignored-qualifiers
-build --copt -Wimplicit-fallthrough=3
+# XXX: zlib
+# build --copt -Wimplicit-fallthrough=3
 build --copt -Wmaybe-uninitialized
 build --copt -Wshift-negative-value
 build --copt -Wsign-compare
