--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-# XXX: Interferes with typical lib directories
+# NOTE: not using this because it interferes with typical lib directories
 # lib/
 lib64/
 parts/
