--- a/.bazelrc
+++ b/.bazelrc
@@ -66,9 +66,12 @@ build:quiet --noshow_progress
 # Allow user to extend .bazelrc
 try-import %workspace%/user.bazelrc
 
+# XXX: Need for arm-none-eabi
+build --incompatible_enable_cc_toolchain_resolution
+build --platforms=@arm_none_eabi//platforms:arm_none_generic
+
 # TODO(https://github.com/michael-christen/toolbox/issues/28): stop interference with rules_rust
 # # https://github.com/aspect-build/gcc-toolchain/issues/85
-# build --incompatible_enable_cc_toolchain_resolution
 # build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 # # Performance per #85
 # build --experimental_reuse_sandbox_directories
