--- a/.bazelrc
+++ b/.bazelrc
@@ -67,11 +67,11 @@ build:quiet --noshow_progress
 try-import %workspace%/user.bazelrc
 
 # TODO(https://github.com/michael-christen/toolbox/issues/28): stop interference with rules_rust
-# # https://github.com/aspect-build/gcc-toolchain/issues/85
-# build --incompatible_enable_cc_toolchain_resolution
-# build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
-# # Performance per #85
-# build --experimental_reuse_sandbox_directories
-# # Have rules_rust use the right hermetic toolchain sysroot, symlink folders
-# # into execution directory
-# build --@rules_rust//cargo/settings:experimental_symlink_execroot=True
+# https://github.com/aspect-build/gcc-toolchain/issues/85
+build --incompatible_enable_cc_toolchain_resolution
+build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
+# Performance per #85
+build --experimental_reuse_sandbox_directories
+# Have rules_rust use the right hermetic toolchain sysroot, symlink folders
+# into execution directory
+build --@rules_rust//cargo/settings:experimental_symlink_execroot=True
