let aspect rules_py back except for test

--- a/.bazelrc
+++ b/.bazelrc
@@ -75,3 +75,6 @@ try-import %workspace%/user.bazelrc
 # # Have rules_rust use the right hermetic toolchain sysroot, symlink folders
 # # into execution directory
 # build --@rules_rust//cargo/settings:experimental_symlink_execroot=True
+
+# Must match PYTHON_VERSION in MODULE.bazel
+common --@aspect_rules_py//py:interpreter_version=3.11.9
