--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,7 +1,6 @@
 module(name="mchristen", version="")
 
-# TODO(#52): Add aspect_rules_py back
-# bazel_dep(name = "aspect_rules_py", version = "0.7.3")
+bazel_dep(name = "aspect_rules_py", version = "0.7.3")
 
 # Minimum version needs:
 # feat: add interpreter_version_info to py_runtime by @mattem in #1671
