--- a/.bazelrc
+++ b/.bazelrc
@@ -77,4 +77,5 @@ try-import %workspace%/user.bazelrc
 # build --@rules_rust//cargo/settings:experimental_symlink_execroot=True
 
 # Must match PYTHON_VERSION in MODULE.bazel
+# LINK(7e463bc3_e4d9_4464_ba39_3217c4a86004)
 common --@aspect_rules_py//py:interpreter_version=3.11.9
