--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,6 +7,8 @@ bazel_dep(name = "aspect_rules_py", version = "0.7.3")
 bazel_dep(name = "rules_python", dev_dependency = True, version = "0.29.0")
 
 python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+# Must match interpreter_version in .bazelrc
+# LINK(7e463bc3_e4d9_4464_ba39_3217c4a86004)
 PYTHON_VERSION = "3.11"
 python.toolchain(
     configure_coverage_tool = True,
