--- a/.bazelrc
+++ b/.bazelrc
@@ -1,5 +1,5 @@
-# Don't use bzlmod yet
-common --noenable_bzlmod
+# Use bzlmod
+common --enable_bzlmod
 
 # https://github.com/aspect-build/gcc-toolchain/issues/161
 build --noincompatible_sandbox_hermetic_tmp
@@ -75,3 +75,7 @@ try-import %workspace%/user.bazelrc
 # # Have rules_rust use the right hermetic toolchain sysroot, symlink folders
 # # into execution directory
 # build --@rules_rust//cargo/settings:experimental_symlink_execroot=True
+
+# Must match PYTHON_VERSION in MODULE.bazel
+# LINK(7e463bc3_e4d9_4464_ba39_3217c4a86004)
+common --@aspect_rules_py//py:interpreter_version=3.11.9
