--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,7 @@
+# Update via
 # bazel run //:requirements.update && bazel run //:gazelle_python_manifest.update
+# Test via
+# bazel test //:gazelle_python_manifest.test //:requirements_test
 beautifulsoup4
 grpcio
 pytest
