First try for rust

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -29,3 +29,29 @@ pip.parse(
     requirements_lock = "//:requirements_lock.txt",
 )
 use_repo(pip, "pip")
+
+bazel_dep(name = "rules_rust", version = "0.45.1")
+
+rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
+rust.toolchain(
+    edition = "2021",
+    versions = ["1.70.2"],
+)
+use_repo(rust, "rust_toolchains")
+register_toolchains("@rust_toolchains//:all")
+
+crate = use_extension(
+    "@rules_rust//crate_universe:extension.bzl",
+    "crate",
+)
+crate.from_cargo(
+    name = "crate_index",
+    cargo_lockfile = "//:Cargo.lock",
+    # XXX: What about this one?
+    # lockfile = "//:cargo-bazel-lock.json",
+    manifests = [
+        # "//:Cargo.toml",
+        "//:examples/basic/Cargo.toml",
+    ],
+)
+use_repo(crate, "crate_index")
