--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -31,3 +31,5 @@ pip.parse(
 use_repo(pip, "pip")
 
 bazel_dep(name = "protobuf", version = "26.0")
+
+bazel_dep(name = "rules_python_gazelle_plugin", version = "0.32.2")
