--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -32,13 +32,10 @@ use_repo(pip, "pip")
 
 bazel_dep(name = "protobuf", version = "26.0")
 
-bazel_dep(name = "rules_rust", version = "0.45.1")
+bazel_dep(name = "rules_rust", version = "0.38.0")
 
 rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
-rust.toolchain(
-    edition = "2021",
-    versions = ["1.70.2"],
-)
+rust.toolchain(edition = "2021")
 use_repo(rust, "rust_toolchains")
 register_toolchains("@rust_toolchains//:all")
 
