--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,9 +18,10 @@ jobs:
           # dependencies too
           # Or should we just setup remote caching more fully?
           key: ${{ hashFiles('WORKSPACE') }}
-      - name: bzlmod lockfile
-        run: |
-          bazel mod deps --lockfile_mode=error
+      # TODO(#57): Re-enable this check when we fix the false errors
+      # - name: bzlmod lockfile
+      #   run: |
+      #     bazel mod deps --lockfile_mode=error
       - name: Gazelle
         run: |
           bazel run //:gazelle -- -mode diff
