protobuf and rules_rust moved to MODULE.bazel (#54)
- protobuf and rules_rust moved to MODULE.bazel
- add `.gitattributes` to note some files are `linguist-generated`

Commenting out `MODULE.bazel.lock` check unfortunately, see #57 
Note that rules_rust isn't working great, see
https://github.com/michael-christen/toolbox/issues/56

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -29,3 +29,25 @@ pip.parse(
     requirements_lock = "//:requirements_lock.txt",
 )
 use_repo(pip, "pip")
+
+bazel_dep(name = "protobuf", version = "26.0")
+
+bazel_dep(name = "rules_rust", version = "0.38.0")
+
+rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
+rust.toolchain(edition = "2021")
+use_repo(rust, "rust_toolchains")
+register_toolchains("@rust_toolchains//:all")
+
+crate = use_extension(
+    "@rules_rust//crate_universe:extension.bzl",
+    "crate",
+)
+crate.from_cargo(
+    name = "crate_index",
+    cargo_lockfile = "//:Cargo.lock",
+    manifests = [
+        "//:examples/basic/Cargo.toml",
+    ],
+)
+use_repo(crate, "crate_index")
