--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ ensure_newline_before_comments = true
 line_length = 79
 skip_gitignore = true
 default_section = 'THIRDPARTY'
-sections = ['FUTURE','STDLIB','THIRDPARTY', 'mchristen', 'FIRSTPARTY','LOCALFOLDER']
+known_mchristen = 'mchristen'
+sections = ['FUTURE','STDLIB','THIRDPARTY', 'MCHRISTEN', 'FIRSTPARTY','LOCALFOLDER']
 force_single_line = true
-use_parentheses = true
 # known_third_party
 
 # XXX
