--- a/tools/isort/BUILD
+++ b/tools/isort/BUILD
@@ -5,6 +5,7 @@ package(default_visibility = ["//visibility:private"])
 py_binary(
     name = "isort",
     srcs = ["isort.py"],
+    data = ["//:pyproject.toml"],
     visibility = ["//:__subpackages__"],
     deps = ["@pip//isort"],
 )
