--- a/tools/buildifier/BUILD
+++ b/tools/buildifier/BUILD
@@ -2,3 +2,5 @@ alias(
     name = "buildifier",
     actual = "@buildifier_prebuilt//:buildifier",
 )
+
+package(default_visibility = ["//visibility:private"])
