--- a/tools/buildozer/BUILD
+++ b/tools/buildozer/BUILD
@@ -2,3 +2,5 @@ alias(
     name = "buildozer",
     actual = "@buildifier_prebuilt//:buildozer",
 )
+
+package(default_visibility = ["//visibility:private"])
