--- a/tools/prettier/BUILD
+++ b/tools/prettier/BUILD
@@ -2,7 +2,7 @@ load("@npm//:prettier/package_json.bzl", prettier = "bin")
 
 prettier.prettier_binary(
     name = "prettier",
-    data = ["//:.prettierrc"],
+    # .prettierrc accessed directly not as (data)
     # Allow the binary to be run outside bazel
     env = {"BAZEL_BINDIR": "."},
 )
