--- a/tools/flake8/BUILD
+++ b/tools/flake8/BUILD
@@ -7,5 +7,8 @@ py_binary(
     srcs = ["flake8.py"],
     data = ["//:.flake8"],
     visibility = ["//:__subpackages__"],
-    deps = ["@pip//flake8"],
+    deps = [
+        "//tools:utils",
+        "@pip//flake8",
+    ],
 )
