--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,13 +18,9 @@ jobs:
           # dependencies too
           # Or should we just setup remote caching more fully?
           key: ${{ hashFiles('WORKSPACE') }}
-      # TODO(#57): Re-enable this check when we fix the false errors
-      # - name: bzlmod lockfile
-      #   run: |
-      #     bazel mod deps --lockfile_mode=error
-      - name: Gazelle
+      - name: Lint
         run: |
-          bazel run //:gazelle -- -mode diff
+          ./lint.sh --mode check
       - name: Build
         run: |
           bazel build //...
