--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "fake-comment": "To update the pnpm lock file from this package.json, run `bazel run -- @pnpm//:pnpm --dir $PWD install --lockfile-only`",
   "devDependencies": {
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+     "pyright" : "1.1.364"
   }
 }
