--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -141,3 +141,5 @@ use_repo(npm, "npm")
 use_repo(pnpm, "pnpm")
 
 bazel_dep(name = "rules_multirun", version = "0.9.0")
+
+bazel_dep(name = "aspect_rules_lint", version = "1.0.0-rc1")
