--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,6 +1,8 @@
 name: Build and Test
 run-name: ${{ github.actor }} is building and testing ${{ github.repository }}
-on: [pull_request]
+on:
+  pull_request:
+  workflow_dispatch:
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
