Run on commit to master

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,6 +3,9 @@ run-name: ${{ github.actor }} is building and testing ${{ github.repository }}
 on:
   pull_request:
   workflow_dispatch:
+  push:
+    branches:
+      - master
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
