--- a/.bazelrc
+++ b/.bazelrc
@@ -24,7 +24,7 @@ build --copt -Wmemset-transposed-args
 build --copt -Wcast-function-type
 build --copt -Wclobbered
 build --copt -Wempty-body
-build --copt -Wenum-conversion
+# build --copt -Wenum-conversion
 build --copt -Wexpansion-to-defined
 build --copt -Wignored-qualifiers
 # TODO(https://github.com/michael-christen/toolbox/issues/42): Re-enable
@@ -33,7 +33,7 @@ build --copt -Wignored-qualifiers
 build --copt -Wmaybe-uninitialized
 build --copt -Wshift-negative-value
 build --copt -Wsign-compare
-build --copt -Wstring-compare
+# build --copt -Wstring-compare
 build --copt -Wtype-limits
 build --copt -Wuninitialized
 build --copt -Wunused-but-set-parameter
@@ -57,7 +57,7 @@ build --copt -Werror
 build --copt -fdiagnostics-color=always
 
 # Let's use the latest and greatest we can
-build --cxxopt='-std=c++20' --host_cxxopt='-std=c++20'
+# build --cxxopt='-std=c++20' --host_cxxopt='-std=c++20'
 # NOTE: Can also specify --linkopt
 
 # Only build tests when testing
@@ -75,7 +75,7 @@ try-import %workspace%/user.bazelrc
 
 # TODO(https://github.com/michael-christen/toolbox/issues/28): stop interference with rules_rust
 # # https://github.com/aspect-build/gcc-toolchain/issues/85
-# build --incompatible_enable_cc_toolchain_resolution
+build --incompatible_enable_cc_toolchain_resolution
 # build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 # # Performance per #85
 # build --experimental_reuse_sandbox_directories
