Setup platform_data so we can make different builds all with bazel build //...

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -141,3 +141,8 @@ use_repo(npm, "npm")
 use_repo(pnpm, "pnpm")
 
 bazel_dep(name = "rules_multirun", version = "0.9.0")
+
+########################################
+# Set up rules_platform
+########################################
+bazel_dep(name = "rules_platform", version = "0.1.0")
