--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -45,7 +45,7 @@ pip.parse(
 use_repo(pip, "pip")
 
 bazel_dep(name = "protobuf", version = "26.0")
-bazel_dep(name = "rules_rust", version = "0.38.0")
+bazel_dep(name = "rules_rust", version = "0.48.0")
 
 rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
 rust.toolchain(edition = "2021")
@@ -141,3 +141,6 @@ use_repo(npm, "npm")
 use_repo(pnpm, "pnpm")
 
 bazel_dep(name = "rules_multirun", version = "0.9.0")
+
+# XXX: Specify to support stackb_rules_proto
+bazel_dep(name = "rules_apple", version = "3.7.0", repo_name = "build_bazel_rules_apple")
