--- a/examples/pigweed/BUILD
+++ b/examples/pigweed/BUILD
@@ -2,7 +2,7 @@
 load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
 # XXX: load("@pigweed//pw_system/py:console.bzl", "device_console", "device_simulator_console")
 # XXX: load("@pigweed//targets/host_device_simulator:transition.bzl", "host_device_simulator_binary")
-load("//targets:transition.bzl", "rp2040_binary", "stm32_binary")
+load("//targets:transition.bzl", "stm32_binary")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -14,19 +14,20 @@ cc_binary(
         "@pigweed//pw_chrono:system_clock",
         "@pigweed//pw_chrono:system_timer",
         "@pigweed//pw_log",
+        # XXX: pw_system invokes protoc in a way that leads to a segfault?
         "@pigweed//pw_system",
     ],
 )
 
-stm32_binary(
-    name = "stm32_blinky.elf",
-    binary = ":blinky",
-)
+# stm32_binary(
+#     name = "stm32_blinky.elf",
+#     binary = ":blinky",
+# )
 
-rp2040_binary(
-    name = "rp2040_blinky.elf",
-    binary = ":blinky",
-)
+# rp2040_binary(
+#     name = "rp2040_blinky.elf",
+#     binary = ":blinky",
+# )
 
 # native_binary(
 #     name = "flash_stm32",
