--- a/examples/pigweed/BUILD
+++ b/examples/pigweed/BUILD
@@ -19,6 +19,7 @@ cc_binary(
     ],
 )
 
+# These also weren't working
 # stm32_binary(
 #     name = "stm32_blinky.elf",
 #     binary = ":blinky",
