--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -142,5 +142,5 @@ use_repo(pnpm, "pnpm")
 
 bazel_dep(name = "rules_multirun", version = "0.9.0")
 
-# XXX: Specify to support stackb_rules_proto
+# Specify to support stackb_rules_proto in bazel 7
 bazel_dep(name = "rules_apple", version = "3.7.0", repo_name = "build_bazel_rules_apple")
